--- a/index.html
+++ b/index.html
@@ -41,36 +41,44 @@
           title="A Imobiliária que te ajuda a conquistar seu sonho da casa nova."
         />
       </figure>
-    </main>
-    <div class="secao3">
       <h1>Encontre o imóvel dos seus sonhos</h1>
       <h2>A imobiliária que te ajuda no sonho do seu imóvel.</h2>
-      <img src="Imagens/imovel-assinatura.jpg" alt="" />
-      <p>
-        Há <span class="texto-azul">10 anos</span> no ramo temos conquistado a
-        confiança de <span class="texto-azul">inúmeros clientes</span>. Isso
-        porque procuramos sempre as melhores condições tanto para quem quer
-        comprar, para quem quer vender ou alugar. Oferecemos um
-        <span class="texto-azul">serviço de qualidade</span> servindo como ponte
-        entre as partes interessadas.
-      </p>
-    </div>
-    <div class="secao4" id="servicos">
+      <figure>
+        <img
+          src="Imagens/imovel-assinatura.jpg"
+          alt="Imagem-Assinatura"
+          title="Imobiliaria Santos"
+        />
+      </figure>
+      <section>
+        <p>
+          Há <span class="texto-azul">10 anos</span> no ramo temos conquistado a
+          confiança de <span class="texto-azul">inúmeros clientes</span>. Isso
+          porque procuramos sempre as melhores condições tanto para quem quer
+          comprar, para quem quer vender ou alugar. Oferecemos um
+          <span class="texto-azul">serviço de qualidade</span> servindo como
+          ponte entre as partes interessadas.
+        </p>
+      </section>
       <h2>Serviços</h2>
-      <p>
-        Contamos com diversos
-        <span class="texto-amarelo">serviços imobiliários</span> e também
-        prestamos suporte em cada uma das etapas necessárias de cada serviço.
-        Aqui na <span class="texto-amarelo">Imobiliária Santos</span> podemos te
-        ajudar com a seguinte gama de assuntos relativos a imóveis:
-      </p>
-      <ul>
-        <li>Venda</li>
-        <li>Aluguel</li>
-        <li>Financiamento</li>
-        <li>Parcerias</li>
-      </ul>
-    </div>
+      <section>
+        <p>
+          Contamos com diversos
+          <span class="texto-azul">serviços imobiliários</span> e também
+          prestamos suporte em cada uma das etapas necessárias de cada serviço.
+          Aqui na <span class="texto-azul">Imobiliária Santos</span> podemos te
+          ajudar com a seguinte gama de assuntos relativos a imóveis:
+        </p>
+      </section>
+      <div id="servicos">
+        <ul>
+          <li>Venda</li>
+          <li>Aluguel</li>
+          <li>Financiamento</li>
+          <li>Parcerias</li>
+        </ul>
+      </div>
+    </main>
     <div class="secao5" id="corretores">
       <h2>Corretores</h2>
       <img src="Imagens/corretores.jpg" alt="Corretores" />
