--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         </nav>
       </div>
     </header>
+    <!--Fim Cabecalho-->
+    <!--#######-->
     <!--Área Principal-->
     <main>
-      <figure>
+      <figure id="imagem-principal">
         <img
           src="Imagens/banner.jpg"
           alt="Imagem do Banner"
@@ -43,7 +45,7 @@
       </figure>
       <h1>Encontre o imóvel dos seus sonhos</h1>
       <h2>A imobiliária que te ajuda no sonho do seu imóvel.</h2>
-      <figure>
+      <figure class="imagem-secundaria">
         <img
           src="Imagens/imovel-assinatura.jpg"
           alt="Imagem-Assinatura"
@@ -61,27 +63,28 @@
         </p>
       </section>
       <h2>Serviços</h2>
-      <section>
+      <section id="servicos">
         <p>
           Contamos com diversos
-          <span class="texto-azul">serviços imobiliários</span> e também
+          <span class="texto-amarelo">serviços imobiliários</span> e também
           prestamos suporte em cada uma das etapas necessárias de cada serviço.
-          Aqui na <span class="texto-azul">Imobiliária Santos</span> podemos te
+          Aqui na <span class="texto-amarelo">Imobiliária Santos</span> podemos te
           ajudar com a seguinte gama de assuntos relativos a imóveis:
         </p>
+        <div>
+          <ul class="servicos-lista">
+            <li>Venda</li>
+            <li>Aluguel</li>
+            <li>Financiamento</li>
+            <li>Parcerias</li>
+          </ul>
       </section>
-      <div id="servicos">
-        <ul>
-          <li>Venda</li>
-          <li>Aluguel</li>
-          <li>Financiamento</li>
-          <li>Parcerias</li>
-        </ul>
+
       </div>
-    </main>
-    <div class="secao5" id="corretores">
       <h2>Corretores</h2>
-      <img src="Imagens/corretores.jpg" alt="Corretores" />
+      <figure class="imagem-secundaria">
+        <img src="Imagens/corretores.jpg" alt="Corretores" />
+      </figure>
       <p>
         A <span class="texto-azul">imobiliária Santos</span> conta com um time
         de profissionais qualificados que têm vários anos de experiência no
@@ -89,23 +92,24 @@
         clicar no link a seguir:
         <a href="email:corretores@email.com">Corretores</a>
       </p>
-    </div>
-    <div class="secao6" id="contato">
       <h2>Contato</h2>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7346.254844548052!2d-43.364712467659004!3d-22.98234139602229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2ed54ec2e1%3A0x4431d262cad1d163!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-904!5e0!3m2!1spt-BR!2sbr!4v1642532754862!5m2!1spt-BR!2sbr"
         frameborder="0"
       ></iframe>
+    </main>
+    <footer>
       <p>
         Se ficou interessado em nos conhecer ou se tiver dúvidas entre em
-        <span class="texto-amarelo">contato</span> conosco através de um dos
+        <span class="texto-azul">contato</span> conosco através de um dos
         telefones abaixo:
       </p>
-      <ul type="none">
+      <ul>
         <li><a href="#">Escritório Barra da Tijuca</a></li>
         <li><a href="#">Centro/RJ</a></li>
         <li><a href="#">Meier</a></li>
       </ul>
+    </footer>
     </div>
   </body>
 </html>
