--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </ul>
       </section>
       </div>
-      <h2>Corretores</h2>
+      <h2 id="corretores">Corretores</h2>
       <figure class="imagem-secundaria">
         <img src="Imagens/corretores.jpg" alt="Corretores" />
       </figure>
@@ -91,7 +91,7 @@
         clicar no link a seguir:
         <a href="email:corretores@email.com">Corretores</a>
       </p>
-      <h2>Contato</h2>
+      <h2 id="contato">Contato</h2>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7346.254844548052!2d-43.364712467659004!3d-22.98234139602229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2ed54ec2e1%3A0x4431d262cad1d163!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-904!5e0!3m2!1spt-BR!2sbr!4v1642532754862!5m2!1spt-BR!2sbr"
         frameborder="0"
@@ -107,7 +107,9 @@
       <ul>
         <li><a href="#">Escritório Barra da Tijuca</a></li>
         <li><a href="#">Centro/RJ</a></li>
-        <li><a href="#">Meier</a></li>
+        <span id="footer-fim">
+          <li><a href="#">Meier</a></li>
+        </span>
       </ul>
     </footer>
     <!--Fim Rodapé-->
